app/globals.css
@import "tailwindcss";

:root {
  color-scheme: light;

  --background: #f4f5f0;
  --foreground: #171717;
  --gray: #e5e5e5;
  --warm-white: #f8f8f8;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-ibm-sans: var(--font-ibm-sans);
  --color-gray: var(--gray);
  --color-warm-white: var(--warm-white);
}

* {
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
  scroll-behavior: smooth;
}

*::-webkit-scrollbar {
  display: none; /* Chrome, Safari, Opera */
}

/* * {
  cursor: none;
}

a, button, input, [role="button"] {
  cursor: none;
} */ 

.no-scrollbar {
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.no-scrollbar::-webkit-scrollbar {
  display: none;
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: var(--font-ibm-sans), system-ui, -apple-system;
  line-height: 150%;
}

h2,
h3 {
  font-family: var(--font-dm-mono);
  font-size: 14px;
  text-transform: uppercase;
  letter-spacing: 1.4px;
  color: #a3a3a3;
}

.point {
  font-family: var(--font-dm-mono); 
  letter-spacing: 1.2px;
  color: #a3a3a3;
} 

.higlight-gray {
  color: #a3a3a3;
}

.higlight-gray-bg {
  background-color: #a3a3a3;
}

/* .gradient {
  background: linear-gradient(135deg, #F9F8F4 0%, #ECEDEA 42%, #DEE3EA 73%, #93ADD2 100%);
} */

.backdrop {
  position: fixed;
  height: 100px;   
  top: 0;
  inset: 0; 
  backdrop-filter: blur(5px); 
  -webkit-mask-image: linear-gradient(to bottom, rgb(255, 255, 255) 0%, rgb(255, 255, 255) 60%, transparent 60% 100%);
  mask-image: linear-gradient(to bottom, white 0%, white 60%, transparent 60% 100%); 
} 
 
.gradient {
  background: linear-gradient(
    135deg,
    #f9f8f4 0%,
    #ecedea 32%,
    #dee3ea 55%,
    #93add2 100%
  );

  background-size: 130% 130%;
 
  animation: moveGradient 10s ease infinite; 
}

.page-gradient {
  background: linear-gradient(
    100deg,
    #f9f8f4 0%,
    #ecedea 42%,
    #dee3ea 75%,
    #93add2ce 120%
  );   
  
  background-size: 130% 130%;

  animation: moveGradient 10s ease infinite;
} 

@keyframes moveGradient {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

ul {
  list-style: none;
  padding-left: 0;
}

ul ul {
  padding-left: 16px;
  border-left: 1px solid #eee;
}

.swiper-container {
  width: 600px; /* or a percentage, e.g., 80% */
  height: 300px; /* Optional, define height */
}
 
.swiper-scrollbar {
  transform: scale(0.8);
} 

.swiper-slide-shadow, .swiper-slide-shadow-cards {
  display: none;
}

.swiper {
  margin-left: 0 !important;
  margin-right: 0 !important;  
}

.scroll-smooth {
  scroll-behavior: smooth;
} 

